@@ -103,6 +103,8 @@ class IMP_Imap implements Serializable
 
         case 'max_compose_recipients':
         case 'max_compose_timelimit':
+            return $GLOBALS['injector']->getInstance('Horde_Perms')->getPermissions('imp:' . str_replace('max_compose', 'max', $key), $GLOBALS['registry']->getAuth());
+
         case 'max_create_mboxes':
             return $GLOBALS['injector']->getInstance('Horde_Perms')->getPermissions('imp:' . $this->_getPerm($key), $GLOBALS['registry']->getAuth());
 
