@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Fixed regression in enforcing max_recipients and max_timelimit permissions (Bug #12674).
 * [mms] Correctly enforce file size attachment limits on the first attachment (Bug #12663).
 * [mms] SECURITY: Fix XSS when flagging a message in dynamic view with a user-defined flag (João Machado &lt;geral@jpaulo.eu&gt;).
 * [mms] Don&apos;t attempt to get quota information from non-IMAP mailboxes (Bug #12608).
@@ -3290,6 +3291,7 @@
    <date>2013-09-04</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Fixed regression in enforcing max_recipients and max_timelimit permissions (Bug #12674).
 * [mms] Correctly enforce file size attachment limits on the first attachment (Bug #12663).
 * [mms] SECURITY: Fix XSS when flagging a message in dynamic view with a user-defined flag (João Machado &lt;geral@jpaulo.eu&gt;).
 * [mms] Don&apos;t attempt to get quota information from non-IMAP mailboxes (Bug #12608).
